@@ -1,3 +1,6 @@
+2015-08-27  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/planner.c: Improve message.
+
 2015-08-24  Jean-Louis Martineau <martineau@zmanda.com>
 	* application-src/amzfs-sendrecv.pl: Fix compratio parsing.
 
